deps/v8/test/message/mjsunit/fail/assert-in-promise-fail-recursive.out
Error
*%(basename)s:9: Error: WebAssembly.compile(): Argument 0 must be a buffer source
  WebAssembly.compile();
              ^
Error: WebAssembly.compile(): Argument 0 must be a buffer source
    at TypeError.name (*%(basename)s:9:15)
    at TypeError.toString (<anonymous>)
    at console.log (<anonymous>)
    at *%(basename)s:12:9

1 pending unhandled Promise rejection(s) detected.
